Responsive Design Issues
- Video messed up on larger screens.
- Dots were disorienting.

--- a/loonatv/members/heejin/heejin.css
+++ b/loonatv/members/heejin/heejin.css
@@ -11,7 +11,9 @@ li.active { color:#FF008B; }
 
 #bgVideo {
     position: fixed;
-    transform: translate(0, 36%)
+    transform: translate(0, 36%);
+    object-fit: cover;
+    min-height: 100%;
 }
 
 #bgImg {
@@ -28,7 +30,7 @@ li.active { color:#FF008B; }
     bottom: 0;
     width: 100%;
     height: 100%;
-    background: /*rgba(0 ,0 , 0, 0.35)*/ url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAHUlEQVQYV2NkYGD4z8DAwMgAAf/hDKgAI1YBFC0Ax6EGA0lUbFkAAAAASUVORK5CYII=);
+    background-color: rgba(0 ,0 , 0, 0.5); /* url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAHUlEQVQYV2NkYGD4z8DAwMgAAf/hDKgAI1YBFC0Ax6EGA0lUbFkAAAAASUVORK5CYII=); */
     text-align: center;
     overflow-y: scroll;
 }
